# ai-chatbot

./: .env.sample  README.md  pyproject.toml  requirements.txt
ai_chatbot/: chatgpt.py  config.py  main.py
