[tool.poetry]
name = "ai-chatbot"
version = "0.1.0"
description = "basic ai chatbot with openai API"
authors = ["Alexander <archon.san@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.16.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start = 'ai_chatbot.main:start'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
